@@ -1,4 +1,4 @@
 DIST GPLIGC-1.5.1.tar.gz 995346 RMD160 f4076f8e08e7b24d3b87de8a28af1da4bf851ff2 SHA1 ea08ea9bdeb86454d35f1640c33263806aac1bf5 SHA256 a93bccfc814c6d6ef04df84bf9620168bd9d8cac9bbefd1d026e939f29259c04
-EBUILD gpligc-1.5.1.ebuild 3065 RMD160 b94f4171e5e5bc667233112d498ea5485f7cafc6 SHA1 8a83a4af746719ab69c58a6aa96220b1712dc321 SHA256 8338cc057bf253202e7aa72b53179fd41c5b447cde3754686190f9e3f4c49f25
-MISC ChangeLog 296 RMD160 0b9c133cffaceacc47277f6db5f729341bee7a11 SHA1 6158409b040b7d1a6f701906365cd46bd2369482 SHA256 572a433a850a19a050b11389259e924e55dfd8cfe585e894a967b4daa6c68603
+EBUILD gpligc-1.5.1.ebuild 2784 RMD160 5a0390dbb6d6a5c1c2df30e762570a2b18482a38 SHA1 3fc90f30a7bea0d1fdc2d8567920fe9b207ff617 SHA256 251becdb117e89ed714f61f445aa7cf2cf81cac033016a646ca1f08cbcd7941b
+MISC ChangeLog 416 RMD160 48c0c2f71b6bc6a53c90cb64c5dd8010fe19773f SHA1 4604c7717b1d1eb1282480e4c937225c961d37d5 SHA256 1bb78f5cf3b07d21b9cbb5cea4fc8650b8252a5ba1c1a40f66cbd8253a464d31
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
